--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -2,6 +2,7 @@
   min-width: 320px;
   max-width: 375px;
   margin: 0 auto;
+  margin-top: 36px;
   border: 1px solid #ccc;
   border-radius: 10px;
   text-align: center;
